SUREFIRE-1909 permit to set the Jpms test openness mode
Signed-off-by: Nils Renaud <renaud.nils@gmail.com>